--- a/GetDataSol/GetDataMvc/GetDataMvc.csproj
+++ b/GetDataSol/GetDataMvc/GetDataMvc.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
   </ItemGroup>
 
